# raveling

./: .gitignore  ABOUT.md  CLAUDE.md  LICENSE  README.md  index.html  index.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
_empd/: Notes.txt
core/: index.ts
core/utilities/: RavelColors.ts  RavelEmoji.ts  RavelMusic.js  RavelUtilities.js
core/web-components/: index.js  index.ts
docs/: sandbox-style-guide.md
docs/prompts/: prompt-stash.txt
docs/spec/: SOUL-IN.md  SOUL-SPEC-MINI-OPENAI.md  SOUL-SPEC-MINI.md  SOUL-SPEC.md  ravel-element-spec.md
projects/gifograf-setup-tool/: RavelGadget.js  ble_server.py  bundle.js  components.ts  gifograf-setup-ravel.html  index.html  old-index.html  vite.config.ts
public/libs/: libpd-glottalizer.data  libpd-glottalizer.js  libpd-glottalizer.wasm
ref-code/feral-vocaloid/: tract~.pd
styles/: styles.css
tools/: midi-sample-input.mid  mzo-1-a.mid  mzo-1.mid  mzo-4.mid
tools/arxiv-weekly/: arxiv-weekly.md  arxiv_weekly.py  main.py  pyproject.toml
tools/hoarders-little-helper/: plan.md  q-threads.txt  spec.txt
tools/hoarders-little-helper/app/src-tauri/: Cargo.toml  tauri.conf.json
tools/hoarders-little-helper/app/src-tauri/capabilities/: default.json
tools/hoarders-little-helper/app/src-tauri/icons/: icon.icns
tools/hoarders-little-helper/app/src-tauri/src/: lib.rs  main.rs
tools/hoarders-little-helper/app/src-tauri/src/commands/: import.rs
tools/logic-template-builder/: BBC_Symphony_Orchestra.mid  bbc_orchestra.json  build_template.py
(+311 files in other folders)
