[package]
name    = "hoarders-little-helper"
version = "0.1.0"
edition = "2021"

[lib]
name = "hoarders_little_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["devtools"] }
tauri-plugin-sql   = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-fs    = { version = "2" }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
image              = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
img_hash           = "3"
uuid               = { version = "1", features = ["v4"] }
walkdir            = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
